# diet_aoc2022

./: Cargo.toml  readme.md
src/: dec_1_1.rs  dec_1_2.rs  dec_1_part_b.rs  dec_2_1.rs  dec_2_2.rs  dec_3_1.rs  dec_3_2.rs  dec_4_1.rs  dec_4_2.rs
