[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name="dec_1_1"
path="src/dec_1_1.rs"



[[bin]]
name="dec_1_2"
path="src/dec_1_1.rs"



[[bin]]
name="dec_2_1"
path="src/dec_2_1.rs"



[[bin]]
name="dec_2_2"
path="src/dec_2_2.rs"

[[bin]]
name="dec_3_1"
path="src/dec_3_1.rs"


[[bin]]
name="dec_3_2"
path="src/dec_3_2.rs"